Fix icons alignement

--- a/assets/stylesheets/globals/_icons.scss
+++ b/assets/stylesheets/globals/_icons.scss
@@ -1,41 +1,69 @@
+@import "compass/css3/font-face";
+
 @mixin i-class($name,$pua) {
   .#{$classPrefix}#{$name}:before {
     content: "\f#{$pua}";
   }
 }
 
-@mixin face {
-  @font-face {
-    font-family: $fontName;
-    src: url('#{$fontFileName}.eot');
-    src: url('#{$fontFileName}.eot?#iefix') format('embedded-opentype'),
-         url('#{$fontFileName}.woff') format('woff'),
-         url('#{$fontFileName}.ttf') format('truetype'),
-         url('#{$fontFileName}.svg##{$fontName}') format('svg');
-    font-weight: normal;
-    font-style: normal;
-  }
-}
+@include font-face (
+	$fontName,
+	font-files(
+		"#{$fontPath}.woff", woff,
+		"#{$fontPath}.ttf", truetype,
+		"#{$fontPath}.svg##{$fontName}", svg),
+  '#{$fontPath}.eot',
+    normal,
+    normal);
 
-/* font-face */
-@include face;
-
-/* global foundicon styles */
-[class*="#{$classPrefix}"] {
-  display: inline;
-  width: auto;
-  height: auto;
-  line-height: inherit;
-  vertical-align: baseline;
-  background-image: none;
-  background-position: 0 0;
-  background-repeat: repeat;
-}
-[class*="#{$classPrefix}"]:before {
+[class^="#{$classPrefix}"]:before,
+[class*=" #{$classPrefix}"]:before {
   font-family: $fontName;
   font-weight: normal;
   font-style: normal;
+  display: inline-block;
   text-decoration: inherit;
+}
+
+a [class^="#{$classPrefix}"],
+a [class*=" #{$classPrefix}"] {
+  display: inline-block;
+	line-height: 1;
+	vertical-align: middle;
+  text-decoration: inherit;
+}
+
+.button {
+	&.icon {
+		background: none;
+		border: none;
+		padding: 0 ($btnBase / 2);
+		&:hover  { color: inherit; background: none; }
+    &:active { @include box-shadow(none); }
+    &:focus  { @include box-shadow(none); color: inherit; }
+  }
+}
+
+li {
+  [class^="#{$classPrefix}"],
+  [class*=" #{$classPrefix}"] {
+    display: inline-block;
+    width: 1.5em;
+    text-align: center;
+  }
+}
+
+ul.icons {
+  list-style-type: none;
+  margin-left: 2em;
+  text-indent: -.8em;
+
+  li {
+    [class^="#{$classPrefix}"],
+    [class*=" #{$classPrefix}"] {
+      width: .8em;
+    }
+  }
 }
 
 /* icons */
